<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#455253"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:shadowColor="#A18181"
        android:text="@string/heading"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:fontFamily="@font/alegreya_sc_italic"
        android:gravity="center"
        android:shadowColor="#A18181"
        android:text="@string/subheading"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="35dp">

        <TextView
            android:id="@+id/module1text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module1"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/module2text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module2"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/module3text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module3"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/module4text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module4"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/module5text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module5"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="95dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:background="@drawable/schoolbuild" />

    </LinearLayout>

</LinearLayout>